# bevy_gearbox

./: Cargo.toml  DOCS.md  README.md  plan.md
examples/: animated_character.rs  app_state.rs  character_state_machine.rs  custom_payload.rs  door.rs  payload_projectile.rs  repeater.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: active.rs  bevy_state.rs  commands.rs  components.rs  guards.rs  history.rs  iter.rs  lib.rs  parameter.rs  prelude.rs  state_aggregator.rs  state_component.rs  transition_listener.rs  transitions.rs
tests/: bevy_state.rs  core_features.rs  parameter.rs  state_machine.rs  state_machine_tests.rs
