[package]
name = "bevy_gearbox"
version = "0.3.4"
edition = "2021"
description = "State machine system for the bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox"
readme = "README.md"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = "=0.17.0-rc.1"
bevy_gearbox_macros = { path = "../bevy_gearbox_macros" }

[dev-dependencies]
bevy = "=0.17.0-rc.1"
# bevy-inspector-egui = "0.32.0"
# bevy_egui = "0.35.1"
# bevy_gearbox_editor = { path = "../bevy_gearbox_editor" }