[package]
name = "bevy_gearbox"
version = "0.3.5"
edition = "2021"
description = "State machine system for the bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DEMIURGE-studio/bevy_gearbox"
homepage = "https://github.com/DEMIURGE-studio/bevy_gearbox"
readme = "README.md"
keywords = ["bevy", "state-machine", "gamedev", "ecs"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = "0.17.0"
bevy_gearbox_macros = "0.3.0"

[dev-dependencies]
bevy = "0.17.0"